fixed overflowing of services pop ups

--- a/style.scss
+++ b/style.scss
@@ -495,4 +495,14 @@ footer {
   #title {
     font-size: 1.3em;
   }
+  .services {
+    li {
+      &:hover {
+        span {
+          width: 200px;
+          z-index: 12;
+        }
+      }
+    }
+  }
 }
